# handler/user/create.go
@@ -11,6 +11,15 @@ import (
 	"github.com/lexkong/log/lager"
 )
 
+// Create 新建用户
+// @Summary Add new user to the database
+// @Description Add a new user
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Param user body user.CreateRequest true "Create a new user"
+// @Success 200 {object} user.CreateResponse "{"code":0,"message":"OK","data":{"username":"kong"}}"
+// @Router /user/{username} [post]...
 func Create(c *gin.Context) {
 	log.Info("User Create function called.", lager.Data{
 		"X-Request-Id": util.GetReqID(c),
